--- a/views/layouts/application.haml
+++ b/views/layouts/application.haml
@@ -1,5 +1,5 @@
 !!! 5
-%html{html_attrs('en-en')}
+%html
   %head
     %meta{:'http-equiv' => "Content-Type", :content => "text/html; charset=utf-8"}
     %meta{:name => "lang", :content => "en"}
