--- a/views/stylesheets/application.sass
+++ b/views/stylesheets/application.sass
@@ -5,46 +5,46 @@
 
 // Base font
 =font-default
-  font: 13px Arial, Helvetica, sans-serif
+  :font 13px Arial, Helvetica, sans-serif
   
 // Links
 a
-  color: #3366CC
+  :color #3366CC
   &:hover
-    color: #3366CC
-    text-decoration: none
+    :color #3366CC
+    :text-decoration none
   &:focus,
   &:active
-    outline: none
+    :outline none
   &:visited
     // Default style for visited links
 
 body
   +font-default
-  background: #fff
-  color: #0d0d0d
+  :background #fff
+  :color #0d0d0d
   h1
-    position: absolute
-    top: 50%
-    left: 0
-    font-size: 40px
-    font-weight: bold
-    margin-top: -40px
-    text-align: center
-    width: 100%
+    :position absolute
+    :top 50%
+    :left 0
+    :font-size 40px
+    :font-weight bold
+    :margin-top -40px
+    :text-align center
+    :width 100%
   ul
     +border-radius(6px)
-    background: #e7e7e7
-    border: 1px solid #ccc
-    margin-top: 10px
-    margin-left: 10px
-    margin-right: 10px
+    :background #e7e7e7
+    :border 1px solid #ccc
+    :margin-top 10px
+    :margin-left 10px
+    :margin-right 10px
     li
-      display: inline
-      line-height: 30px
-      padding: 0 15px
+      :display inline
+      :line-height 30px
+      :padding 0 15px
       a
-        color: #000
-        text-decoration: none
+        :color #000
+        :text-decoration none
         &:hover
-          text-decoration: underline
+          :text-decoration underline
